--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,81 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+.board {
+  height: 50%;
+  width: 50%;
+  display: inline-block;
+  float: left;
+  margin: 8%;
+}
+
+.card { 
+  height: 200px;
+  width: 150px;
+  border: 1px solid;
+  background-color: yellow; 
+  border-radius: 10px;
+  float: left;
+  margin: 8%;
+}
+
+h1 {
+  color: rgb(2, 132, 130);
+  text-align: center;
+}
+
+h2 {
+  color: #ffd700;
+  text-align: center;
+}
+
+p {
+  padding: 0 0 5px 0;
+  margin: 0 auto;
+  text-align: center;
+}
+
+nav a {
+  text-decoration: none;
+  background-color: #ffbf00;
+  color: #ffffff;
+  padding: 35px;
+  display: block;
+  float: left;
+}
+
+nav a:hover {
+  background-color: #ee5f3c;
+}
+
+nav {
+  background-color: #808080;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0; 
+} 
+
+header {
+  margin: 0 auto;
+}
+
+footer {
+  background-color: #808080;
+  margin: 0 auto;
+  clear: both;
+  height: auto;
+  text-align: center;
+}
+
+
+/*
+body {
+  width: 900px;
+}
+*/ attempt to make width smaller 
+
+
+
